Tables deployed in ux approach

--- a/work_hogaru.html
+++ b/work_hogaru.html
@@ -58,7 +58,7 @@
 		</section>
 
 		<!-- Work -->
-		<section  id="Work" class="section section-2">
+		<section  id="Acquisition" class="section section-2">
 			<div class="container">
 				<div class="columns is-desktop is-centered">
 					<div class="column is-three-quarters is-narrow">
@@ -79,32 +79,73 @@
 								</p>
 								<div class="columns is-desktop">
 									<div class="column is-half">
-										<dl>
-											<dt>1. Problem research</dt>
-												<dd>Recurrent client interviews</dd>
-												<dd>Churned client interviews and surveys</dd>
-											<dt>2. Scoping</dt>
-												<dd>Quantitative - Retention comparisson between clietns that purchased several cleanings VS one cleaning on their first purchase</dd>
-												<dd>Qualitative - Benchmarking the actual 'subscription' services the test clients were using</dd>
-										</dl>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>1. User & Problem Research</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>Recurrent client interviews</td>
+												<td>Churned client interviews and surveys</td>
+											</tr>
+										</table>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>2. Scoping</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>Quantitative - Retention comparisson between clietns that purchased several cleanings VS one cleaning on their first purchase</td>
+												<td>Qualitative - Benchmarking the actual 'subscription' services the test clients were using</td>
+											</tr>
+										</table>
 									</div>
 									<div class="column is-half">
-										<dl>
-											<dt>3. Protyping</dt>
-												<dd>A/B transactional e-mail hacking to provide a 'draft' booking for the client to confirm instead of waiting them to repurchase at the end of the month</dd>
-												<dd>Design Scenario tests</dd>
-											<dt>4. Deployment</dt>
-												<dd>Userflow, features and email chaining</dd>
-										</dl>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>3. Prototyping</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>A/B transactional e-mail hacking to provide a 'draft' booking for the client to confirm instead of waiting them to repurchase at the end of the month</td>
+												<td>Design Scenario tests</td>
+											</tr>
+										</table>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>4. Deployment</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>Userflow, features and email chaining</td>
+											</tr>
+										</table>
 									</div>
 								</div>
 								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Wireframes, UI specs, and User stories were handed to developers
 									<br>
 								Check the wireframe in invision
-								<a href="http://invis.io/VHDZFQGRZ"> HERE</a>
+									<strong><a href="http://invis.io/VHDZFQGRZ"> HERE</a></strong>
 								</p>
-								<!-- Second large project -->
-								<hr>
+								
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Second large project -->
+		<section id="ERP" class="section section-2">
+			<div class="container">
+				<div class="columns is-desktop is-centered">
+					<div class="column is-three-quarters is-narrow">
+						<div class="has-text-left">
+							<div class="content">
 								<h2 class="title is-2">Mobile ERP - Cleaners Operation Management</h2>
 								<p class="subtitle is-5">Bot developed to manage cleaners daily processes <br></p>
 								<p class=''><span class='subtitle is-5'>The problem -</span> Company required a monthly 30% growth in its cleaners fleet, counting ~1200 cleaners by the end of 2017. Each cleaner on a succesful journey follows 4 mandatory steps per day:
@@ -129,29 +170,58 @@
 								</p>
 								<div class="columns is-desktop">
 									<div class="column is-half">
-										<dl>
-											<dt>1. Problem research</dt>
-												<dd>User Shadowing</dd>
-												<dd>Task Analysis</dd>
-											<dt>2. Scoping</dt>
-												<dd>Quantitative - Conversation scraping for identification of most common requests</dd>
-												<dd>Qualitative - Roleplay</dd>
-										</dl>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>1. User & Problem Research</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>User Shadowing</td>
+												<td>Task Analysis</td>
+											</tr>
+										</table>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>2. Scoping</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>Quantitative - Conversation scraping for identification of most common requests</td>
+												<td>Qualitative - Roleplay</td>
+											</tr>
+										</table>
 									</div>
 									<div class="column is-half">
-										<dl>
-											<dt>3. Protyping</dt>
-												<dd>Wizard of Oz</dd>
-												<dd>Paper protoyping</dd>
-											<dt>4. Deployment</dt>
-												<dd>Definition of service moments and touch points</dd>
-												<dd>Decision tree</dd>
-										</dl>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>3. Protoyping</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>Wizard of Oz</td>
+												<td>Paper protoyping</td>
+											</tr>
+										</table>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='3'>4. Deployment</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>Definition of service moments and touch points</td>
+												<td>Decision tree</td>
+												<td>UI components</td>
+											</tr>
+										</table>
 									</div>
 								</div>
-								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Wireframes, UI specs, User stories and the decision tree were handed to developers
+								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Wireframes (confidential), UI specs, User stories and the decision tree were handed to developers
 									<br>
-								Check the decision tree here:
+								Wireframes and UI specs are confidential, however the decision tree can be checked here:
 								</p>
 								<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQgavZ9SUdTe3cyK_dgPGrJf_fTBVVVnO6I2HxodJoNtx_Nje8QaoeMLArRNg3VM1f56Kt-vjhwjoa8/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 							</div>
