--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-	<meta name="author" content="Hassan Ali">
+	<meta name="author" content="Dhiraj Kumar Jain">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
@@ -22,7 +22,7 @@
 						<i class="fa fa-medium"></i>
 					</span>
 				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				<a href="http://github.com/TheAlgo" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
@@ -116,10 +116,10 @@
 				</div>
 				<div class="social-container columns">
 					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class="" src="assets/img/linkedin.png"></a>
+						<a target="_blank" href="https://www.linkedin.com/in/thealgo/"><img class="" src="assets/img/linkedin.png"></a>
 					</div>
 					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
+						<a target="_blank" href="https://www.facebook.com/dhiraj.jain.146069"><img class="" src="assets/img/facebook.png"></a>
 					</div>
 				</div>
 			</div>
