--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Portfolio</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 
@@ -22,35 +22,68 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 </head>
 	<body>
 		<!-- Navbar -->
-		<nav class="nav container void-background">
-			<!-- This "nav-menu" is hidden on mobile -->
-			<!-- Add the modifier "is-active" to display it on mobile -->
-			<div class="nav-left">
-				<a href="https://www.linkedin.com/in/albertoalonsog/" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-linkedin"></i>
-					</span>
-				</a>
-				<a href="http://github.com/a-alonso" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-github"></i>
-					</span>
-				</a>
-			</div>
+		<nav class="navbar is-transparent">
+		  <div class="navbar-brand">
+		    <!-- <a class="navbar-item" href="https://bulma.io">
+		        <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+		    </a> -->
+		    <button class=" navbar-burger" data-target="navMenu">
+		      <span></span>
+		      <span></span>
+		      <span></span>
+		    </button>
+		  </div>
 
-			<div class="nav-right nav-menu">
-				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#Work">Work</a>
-			</div>
+		  <div class="navbar-menu" id="navMenu">
+		    <div class="navbar-start">
+		      <a class="navbar-item" href="https://a-alonso.github.io/portfolio/">
+		        Home
+		      </a>
+		      <div class="navbar-item has-dropdown is-hoverable">
+		        <a class="navbar-link" href="#about">
+		          Work
+		        </a>
+		        <div class="navbar-dropdown">
+		          <a class="navbar-item" href="work_hogaru.html">
+		            Hogaru.com
+		          </a>
+		          <a class="navbar-item" href="work_nequi.html">
+		            Nequi Neobank
+		          </a>
+		          <a class="navbar-item" href="https://bicimapa.com">
+		            Bicimapa
+		          </a>
+							<!-- <hr class="navbar-divider"> -->
+		        </div>
+		      </div>
+		    </div>
 
-			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
-			<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
-			<span class="nav-toggle">
-				<span></span>
-				<span></span>
-			</span>
+		    <div class="navbar-end">
+		      <div class="navbar-item">
+		        <div class="field is-grouped">
+		          <p class="control">
+		            <a class=" button" data-social-network="Linkedin" data-social-target="https://www.linkedin.com/in/albertoalonsog/" target="_blank" href="https://www.linkedin.com/in/albertoalonsog/">
+		              <span class="icon">
+		                <i class="fa fa-linkedin"></i>
+		              </span>
+		              <span>
+		                Linkedin
+		              </span>
+		            </a>
+		          </p>
+		          <p class="control">
+		            <a class="button" href="http://github.com/a-alonso" target="_blank">
+		              <span class="icon">
+		                <i class="fa fa-github"></i>
+		              </span>
+		              <span>Github</span>
+		            </a>
+		          </p>
+		        </div>
+		      </div>
+		    </div>
+		  </div>
 		</nav>
-
 		<!-- About Me -->
 		<section id="about" class="section section-1">
 			<div class="container">
@@ -120,7 +153,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 								<div class="card-content">
 									<p class="title is-3">NEQUI Bancolombia Neobank</p>
 									<p class="subtitle is-6">Micro-crowdlennding concept Hackathon demo</p>
-									<a href="work_hogaru.html" target="_blank"><p> <br>Read more
+									<a href="work_nequi.html" target="_blank"><p> <br>Read more
 										<span class="icon">
 											<i class="fa fa-long-arrow-right"></i>
 										</span>
@@ -158,7 +191,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<small>Alberto Alonso Portfolio 2017 👨🏻‍💻 | alonsog.alberto@gmail.com</small>
+			<small>© Alberto Alonso Portfolio 2017 👨🏻‍💻 | alonsog.alberto@gmail.com</small>
 		</section>
 
 		<!-- Scripts  -->
