--- a/work_nequi.html
+++ b/work_nequi.html
@@ -19,7 +19,7 @@
 		    <!-- <a class="navbar-item" href="https://bulma.io">
 		        <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
 		    </a> -->
-		    <button class=" navbar-burger" data-target="navMenu">
+		    <button class="button navbar-burger" data-target="navMenu">
 		      <span></span>
 		      <span></span>
 		      <span></span>
