--- a/work_nequi.html
+++ b/work_nequi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Work</title>
+	<title>Work: Nequi</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
@@ -78,9 +78,9 @@
 		</nav>
 
 		<!-- About Me -->
-		<section class="hero is-info is-medium">
+		<section class="hero is-primary is-nequi is-medium">
 		  <div class="hero-body">
-		    <div class="container">
+		    <div class="container is-white">
 		      <h1 class="title">
 		        NEQUI Bancolombia Neobank
 		      </h1>
