--- a/index.html
+++ b/index.html
@@ -21,94 +21,95 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 
 </head>
 	<body>
-		<!-- Navbar -->
-		<nav class="navbar is-white">
-		  <div class="navbar-brand">
-		    <!-- <a class="navbar-item" href="https://bulma.io">
-		        <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
-		    </a> -->
-		    <button class="button navbar-burger" data-target="navMenu">
-		      <span></span>
-		      <span></span>
-		      <span></span>
-		    </button>
-		  </div>
-
-		  <div class="navbar-menu" id="navMenu">
-		    <div class="navbar-start">
-		      <a class="navbar-item" href="https://a-alonso.github.io/portfolio/">
-		        Home
-		      </a>
-		      <div class="navbar-item has-dropdown is-hoverable">
-		        <a class="navbar-link" href="#about">
-		          Work
-		        </a>
-		        <div class="navbar-dropdown">
-		          <a class="navbar-item" href="work_hogaru.html">
-		            Hogaru.com
-		          </a>
-		          <a class="navbar-item" href="work_nequi.html">
-		            Nequi Neobank
-		          </a>
-		          <a class="navbar-item" href="https://bicimapa.com">
-		            Bicimapa
-		          </a>
-							<!-- <hr class="navbar-divider"> -->
-		        </div>
-		      </div>
-		    </div>
-
-		    <div class="navbar-end">
-		      <div class="navbar-item">
-		        <div class="field is-grouped">
-		          <p class="control">
-		            <a class=" button" data-social-network="Linkedin" data-social-target="https://www.linkedin.com/in/albertoalonsog/" target="_blank" href="https://www.linkedin.com/in/albertoalonsog/">
-		              <span class="icon">
-		                <i class="fa fa-linkedin"></i>
-		              </span>
-		              <span>
-		                Linkedin
-		              </span>
-		            </a>
-		          </p>
-		          <p class="control">
-		            <a class="button" href="http://github.com/a-alonso" target="_blank">
-		              <span class="icon">
-		                <i class="fa fa-github"></i>
-		              </span>
-		              <span>Github</span>
-		            </a>
-		          </p>
-		        </div>
-		      </div>
-		    </div>
-		  </div>
-		</nav>
 		<!-- About Me -->
-		<section id="about" class="section section-1">
-			<div class="container">
+		<section id="about" class="hero is-light is-bold">
+			<!-- Navbar -->
+			<nav class="navbar is-transparent" role="navigation" aria-label="dropdown navigation">
+			  <div class="navbar-brand">
+			    <!-- <a class="navbar-item" href="https://bulma.io">
+			        <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+			    </a> -->
+			    <button class="button navbar-burger" data-target="navMenu">
+			      <span></span>
+			      <span></span>
+			      <span></span>
+			    </button>
+			  </div>
+
+			  <div class="navbar-menu" id="navMenu">
+			    <div class="navbar-start">
+			      <a class="navbar-item" href="https://a-alonso.github.io/portfolio/">
+			        Home
+			      </a>
+			      <div class="navbar-item has-dropdown is-hoverable">
+			        <a class="navbar-link" href="#about">
+			          Work
+			        </a>
+			        <div class="navbar-dropdown is-boxed">
+			          <a class="navbar-item" href="work_hogaru.html">
+			            Hogaru.com
+			          </a>
+			          <a class="navbar-item" href="work_nequi.html">
+			            Nequi Neobank
+			          </a>
+			          <a class="navbar-item" href="https://bicimapa.com">
+			            Bicimapa
+			          </a>
+								<!-- <hr class="navbar-divider"> -->
+			        </div>
+			      </div>
+			    </div>
+
+			    <div class="navbar-end">
+			      <div class="navbar-item">
+			        <div class="field is-grouped">
+			          <p class="control">
+			            <a class=" button" data-social-network="Linkedin" data-social-target="https://www.linkedin.com/in/albertoalonsog/" target="_blank" href="https://www.linkedin.com/in/albertoalonsog/">
+			              <span class="icon">
+			                <i class="fa fa-linkedin"></i>
+			              </span>
+			              <span>
+			                Linkedin
+			              </span>
+			            </a>
+			          </p>
+			          <p class="control">
+			            <a class="button" href="http://github.com/a-alonso" target="_blank">
+			              <span class="icon">
+			                <i class="fa fa-github"></i>
+			              </span>
+			              <span>Github</span>
+			            </a>
+			          </p>
+			        </div>
+			      </div>
+			    </div>
+			  </div>
+			</nav>
+			<div class="hero-body">
+				<div class="container">
 					<article class="media">
-					  <figure class="media-left">
-					    <p class="image is-70x70">
-					      <img class="avatar" src="https://media.licdn.com/mpr/mpr/shrinknp_100_100/AAIA_wDGAAAAAQAAAAAAAAmeAAAAJDk3N2ExZjcyLWQwMzgtNGU3MC04MWIwLWJjNDU5NmFlMzAzYg.jpg">
-					    </p>
-					  </figure>
-					  <div class="media-content">
-				      <h1 class="title is-1">Alberto Alonso</h1>
-							<p class="subtitle is-3">Portfolio 2017</p>
-					  </div>
-				</article>
-			</div>
-			<div class="container"></br>
-				<p class="">
-					Data-Oriented UX Designer & Product Manager
-					<br>
-					My career is focused on planning, testing, deploying, measuring and iterating digital services
-					<br>
-					- Experience in the public-private sector for massive ICT appropriation [MinTIC + Colciencias & Samsung + Intel]
-					<br>
-					- Experience in the private sector for start-up growth [Y Combinator + Endeavor]
-				</p>
+						<figure class="media-left">
+							<p class="image is-70x70">
+								<img class="avatar" src="https://media.licdn.com/mpr/mpr/shrinknp_100_100/AAIA_wDGAAAAAQAAAAAAAAmeAAAAJDk3N2ExZjcyLWQwMzgtNGU3MC04MWIwLWJjNDU5NmFlMzAzYg.jpg">
+							</p>
+						</figure>
+						<div class="media-content">
+							<h1 class="title">Alberto Alonso</h1>
+							<h2 class="subtitle">Portfolio 2017</h2>
+						</div>
+					</article>
+					<p class="">
+						<br/>
+						Data-Oriented UX Designer & Product Manager
+						<br>
+						My career is focused on planning, testing, deploying, measuring and iterating digital services
+						<br>
+						- Experience in the public-private sector for massive ICT appropriation [MinTIC + Colciencias & Samsung + Intel]
+						<br>
+						- Experience in the private sector for start-up growth [Y Combinator + Endeavor]
+					</p>
+				</div>
 			</div>
 		</section>
 
