Lead text updated

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
- <!-- If you are reviewing my code, I made it myself, is not a template ;) -->
+ <!-- If you are reviewing my code, I made it myself, is not a template ;)
+ //
+ // Dear recruiter / Tech leader:
+ //
+ // Find here the way I like coding,
+ // Despite HTML is pretty boring I can asure my Rails & PostgreSQL abilites stronger than expected
+ // Feel free to check every detail and letting me know if found any mistake
+ //
+ // total_hours_used_here = 18
+ //
+-->
 <head>
 	<title>Portfolio</title>
 	<!-- css files -->
@@ -96,18 +106,21 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 						</figure>
 						<div class="media-content">
 							<h1 class="title">Alberto Alonso</h1>
-							<h2 class="subtitle">Portfolio 2017</h2>
+							<h2 class="subtitle">Product Manager & UX Designer ready for challenges</h2>
 						</div>
 					</article>
 					<p class="">
 						<br/>
-						Data-Oriented UX Designer & Product Manager
-						<br>
+						Data-driven product designer for services levered by technology.
+						Holding a Design degree, worked as a UX Designer and Front-end developer, my background like any other start-up professional is not traditional.
+						<br><br>
+						Find here a merge between Service Design and Technology Crafting.
+						In the past with: Samsung, Intel, Ministerio de TICs. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
+						<br/><br/>
+						Stay in touch! click on the speech bubble at the right corner to find my <strong>contact details</strong>
+
 						My career is focused on planning, testing, deploying, measuring and iterating digital services
 						<br>
-						- Experience in the public-private sector for massive ICT appropriation [MinTIC + Colciencias & Samsung + Intel]
-						<br>
-						- Experience in the private sector for start-up growth [Y Combinator + Endeavor]
 					</p>
 				</div>
 			</div>
@@ -121,7 +134,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 				</div>
 
 				<div class="columns is-desktop">
-					<!-- Work 1 -->
+					<!-- Project 1 -->
 					<div class="column is-6">
 						<a href="work_hogaru.html" target="_blank">
 							<div class="card">
