columns added for desktop

--- a/index.html
+++ b/index.html
@@ -98,30 +98,34 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 			</nav>
 			<div class="hero-body">
 				<div class="container">
-					<article class="media">
-						<figure class="media-left">
-							<p class="image is-70x70">
-								<img class="avatar" src="https://media.licdn.com/mpr/mpr/shrinknp_100_100/AAIA_wDGAAAAAQAAAAAAAAmeAAAAJDk3N2ExZjcyLWQwMzgtNGU3MC04MWIwLWJjNDU5NmFlMzAzYg.jpg">
-							</p>
-						</figure>
-						<div class="media-content">
-							<h1 class="title">Alberto Alonso</h1>
-							<h2 class="subtitle">Product Manager & UX Designer ready for challenges</h2>
-						</div>
-					</article>
-					<p class="">
-						<br/>
-						Data-driven product designer for services levered by technology.
-						Holding a Design degree, worked as a UX Designer and Front-end developer, my background like any other start-up professional is not traditional.
-						<br><br>
-						Find here a merge between Service Design and Technology Crafting.
-						In the past with: Samsung, Intel, Ministerio de TICs. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
-						<br/><br/>
-						Stay in touch! click on the speech bubble at the right corner to find my <strong>contact details</strong>
+					<div class="columns is-desktop">
+						<div class="column is-three-quarters">
+							<article class="media">
+								<figure class="media-left">
+									<p class="image is-70x70">
+										<img class="avatar" src="https://media.licdn.com/mpr/mpr/shrinknp_100_100/AAIA_wDGAAAAAQAAAAAAAAmeAAAAJDk3N2ExZjcyLWQwMzgtNGU3MC04MWIwLWJjNDU5NmFlMzAzYg.jpg">
+									</p>
+								</figure>
+								<div class="media-content">
+									<h1 class="title">Alberto Alonso</h1>
+									<h2 class="subtitle">Product Manager & UX Designer ready for challenges</h2>
+								</div>
+							</article>
+							<p class="">
+								<br/>
+								Data-driven product designer for services levered by technology.
+								Holding a Design degree, worked as a UX Designer and Front-end developer, my background like any other start-up professional is not traditional.
+								<br><br>
+								Find here a merge between Service Design and Technology Crafting.
+								In the past with: Samsung, Intel, Ministerio de TICs. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
+								<br/><br/>
+								Stay in touch! click on the speech bubble at the right corner to find my <strong>contact details</strong>
 
-						My career is focused on planning, testing, deploying, measuring and iterating digital services
-						<br>
-					</p>
+								My career is focused on planning, testing, deploying, measuring and iterating digital services
+								<br>
+							</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
