bicimapa link hotfix + footer spaces

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 			          <a class="navbar-item" href="work_nequi.html">
 			            Nequi Neobank
 			          </a>
-			          <a class="navbar-item" href="https://bicimapa.com">
+			          <a class="navbar-item" href="http://bicimapa.com" target:"_blank">
 			            Bicimapa
 			          </a>
 								<!-- <hr class="navbar-divider"> -->
@@ -209,7 +209,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<small>© Alberto Alonso Portfolio 2017 👨🏻‍💻 | alonsog.alberto@gmail.com</small>
+			<small>© Alberto Alonso Portfolio 2017 👨🏻‍💻 &nbsp;|&nbsp; alonsog.alberto@gmail.com</small>
 		</section>
 
 		<!-- Scripts  -->
