--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
 			<div class="nav-left">
-				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
+				<a href="http://medium.com/@hooijerik/" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-medium"></i>
 					</span>
 				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				<a href="http://github.com/hooijerik" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
+				<a href="https://twitter.com/HooijerErik" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-twitter"></i>
 					</span>
