--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-	<meta name="author" content="Hassan Ali">
+	<meta name="author" content="Erik Hooijer">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
@@ -17,12 +17,12 @@
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
 			<div class="nav-left">
-				<a href="http://medium.com/@hooijerik/" class="nav-item">
+				<a href="https://www.linkedin.com/in/erikhooijer/" class="nav-item">
 					<span class="icon">
-						<i class="fa fa-medium"></i>
+						<i class="fa fa-linkedin"></i>
 					</span>
 				</a>
-				<a href="http://github.com/hooijerik" class="nav-item">
+				<a href="https://github.com/hooijerik" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
@@ -35,9 +35,9 @@
 			</div>
 
 			<div class="nav-right nav-menu">
-				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#projects">Projects</a>
-				<a class="nav-item" href="#social">Social</a>
+				<a class="nav-item" href="#about">Over ons</a>
+				<a class="nav-item" href="#projects">Business Model Team</a>
+				<a class="nav-item" href="#social">Social media</a>
 			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
@@ -52,12 +52,11 @@
 		<!-- About Me -->
 		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
-				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/profile.png">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/yMB9IgLwb04" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
+					In bovenstaande video stel ik (Erik) mezelf voor en geef mijn motivatie aan voor de minor Smart Industry.
 				</p>
 			</div>
 		</section>
@@ -66,7 +65,7 @@
 		<section  id="projects" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
-					<h3 class="title is-3">Projects</h3>
+					<h3 class="title is-3">Business Model Team</h3>
 				</div>
 				
 				<div class="columns is-multiline is-desktop">
@@ -112,14 +111,14 @@
 		<section id="social" class="section section-3">
 			<div class="container">
 				<div class="has-text-centered">					
-					<h3 class="title is-3">Let's Socialize</h3>
+					<h3 class="title is-3">Vind ons op LinkedIn</h3>
 				</div>
 				<div class="social-container columns">
 					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class="" src="assets/img/linkedin.png"></a>
+						<a target="_blank" href="https://www.linkedin.com/in/erikhooijer/"><img class="" src="assets/img/linkedin.png"></a>
 					</div>
 					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
+						<a target="_blank" href="https://www.linkedin.com/in/hans-kruijsse-b16209142/"><img class="" src="assets/img/linkedin.png"></a>
 					</div>
 				</div>
 			</div>
@@ -127,7 +126,7 @@
 		
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<a href="http://www.hassanali.me/about">Hassan Ali</a>
+			<h4>Erik Hooijer en Hans Kruijsse</h4>
 		</section>
 		
 		<!-- Scripts  -->
