Added video hans

--- a/index.html
+++ b/index.html
@@ -51,13 +51,25 @@
 				
 		<!-- About Me -->
 		<section id="about" class="section section-1">
-			<div class="container has-text-centered">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/yMB9IgLwb04" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<div class="column is-6">
+				<div class="container has-text-centered">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/yMB9IgLwb04" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</div>
+				<div class="container"></br>
+					<p class="intro">
+						In bovenstaande video stel ik (Erik) mezelf voor en geef mijn motivatie aan voor de minor Smart Industry.
+					</p>
+				</div>
 			</div>
-			<div class="container"></br>
-				<p class="intro">
-					In bovenstaande video stel ik (Erik) mezelf voor en geef mijn motivatie aan voor de minor Smart Industry.
-				</p>
+			<div class="column is-6">
+				<div class="container has-text-centered">
+					<iframe width="560" height="315" src="https://www.youtube.com/watch?v=8x75DYWscSk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</div>
+				<div class="container"></br>
+					<p class="intro">
+						Andere tekst
+					</p>
+				</div>
 			</div>
 		</section>
 		
