--- a/index.html
+++ b/index.html
@@ -57,15 +57,21 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 			        </a>
 			        <div class="navbar-dropdown is-boxed">
 			          <a class="navbar-item" href="work_hogaru.html">
-			            Hogaru.com
+			            Hogaru.com3
 			          </a>
+								<hr class="navbar-divider">
 			          <a class="navbar-item" href="work_nequi.html">
 			            Nequi Neobank
 			          </a>
-			          <a class="navbar-item" href="http://bicimapa.com" target:"_blank">
-			            Bicimapa
+								<hr class="navbar-divider">
+			          <a class="navbar-item" href="work_rappi.html" target:"_blank">
+			            Rappi
 			          </a>
-								<!-- <hr class="navbar-divider"> -->
+								<hr class="navbar-divider">
+								<a class="navbar-item" href="work_endava.html" target:"_blank">
+			            Endava Ramp-Up Journal
+			          </a>
+								<hr class="navbar-divider">
 			        </div>
 			      </div>
 			    </div>
@@ -103,26 +109,27 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 							<article class="media">
 								<figure class="media-left">
 									<p class="image is-70x70">
-										<img class="avatar" src="https://media.licdn.com/mpr/mpr/shrinknp_100_100/AAIA_wDGAAAAAQAAAAAAAAmeAAAAJDk3N2ExZjcyLWQwMzgtNGU3MC04MWIwLWJjNDU5NmFlMzAzYg.jpg">
+										<img class="avatar" src="assets/img/avatar.png">
 									</p>
 								</figure>
 								<div class="media-content">
 									<h1 class="title">Alberto Alonso</h1>
-									<h2 class="subtitle">Product Manager & UX Designer ready for challenges</h2>
+									<h2 class="subtitle">User Experience Designer & Researcher ready for challenges</h2>
 								</div>
 							</article>
 							<p class="">
 								<br/>
 								Data-driven product designer for services levered by technology.
-								Holding a Design degree, worked as a UX Designer and Front-end developer, my background like any other start-up professional is not traditional.
-								<br><br>
-								Find here a merge between Service Design and Technology Crafting.
-								In the past with: Samsung, Intel, Ministerio de TICs. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
-								<br/><br/>
-								Stay in touch! click on the speech bubble at the right corner to find my <strong>contact details</strong>
-
+								Holding a Design degree, worked as a UX Designer and Front-end developer, my background like any other digital product professional is not traditional.<br/>
 								My career is focused on planning, testing, deploying, measuring and iterating digital services
 								<br>
+								<br><br>
+								Find here a merge between Service Design and Technology Crafting.
+								In the past with: Rappi, Samsung, Intel, IT Minsitry. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
+								<br/>
+								Currently at Endava
+								<br/><br/>
+								Stay in touch! on the right corner buttons to <strong>get in contact</strong><br/>
 							</p>
 						</div>
 					</div>
@@ -139,6 +146,52 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 
 				<div class="columns is-desktop">
 					<!-- Project 1 -->
+					<div class="column is-6">
+						<a href="work_endava.html" target="_blank">
+							<div class="card">
+								<div class="card-image">
+									<figure class="image is-350x150">
+										<img src="assets/img/work_4.jpg" alt="RUJ">
+									</figure>
+								</div>
+								<div class="card-content">
+									<p class="title is-3">Endava Ramp-Up Journal</p>
+									<p class="subtitle is-6">Onboarding tool for large companies | Endava</p>
+									<a href="work_endava.html" target="_blank"><p> <br>Read more
+										<span class="icon">
+											<i class="fa fa-long-arrow-right"></i>
+										</span>
+									</p></a>
+								</div>
+							</a>
+						</div>
+					</div>
+					<!-- Project 2 -->
+					<div class="column is-6">
+						<a href="work_rappi.html" target="_blank">
+							<div class="card">
+								<div class="card-image">
+									<figure class="image is-350x150">
+										<img src="assets/img/work_3.jpg" alt="Rappi">
+									</figure>
+								</div>
+								<div class="card-content">
+									<p class="title is-3">Rappi</p>
+									<p class="subtitle is-6">E-Commerce delivery App | 1,273,000 active users | 🇨🇴 🇧🇷 🇦🇷 🇲🇽 🇨🇱</p>
+									<a href="work_rappi.html" target="_blank"><p> <br>Read more
+										<span class="icon">
+											<i class="fa fa-long-arrow-right"></i>
+										</span>
+									</p></a>
+								</div>
+							</a>
+						</div>
+					</div>
+
+
+				</div>
+				<div class="columns is-desktop">
+					<!-- Project 3 -->
 					<div class="column is-6">
 						<a href="work_hogaru.html" target="_blank">
 							<div class="card">
@@ -159,7 +212,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 							</div>
 						</a>
 					</div>
-					<!-- Project 2 -->
+					<!-- Project 4 -->
 					<div class="column is-6">
 						<a href="work_nequi.html" target="_blank">
 							<div class="card">
@@ -170,7 +223,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 								</div>
 								<div class="card-content">
 									<p class="title is-3">NEQUI Bancolombia Neobank</p>
-									<p class="subtitle is-6">Micro-crowdlennding concept Hackathon demo</p>
+									<p class="subtitle is-6">Micro-crowdlending concept Hackathon demo</p>
 									<a href="work_nequi.html" target="_blank"><p> <br>Read more
 										<span class="icon">
 											<i class="fa fa-long-arrow-right"></i>
@@ -181,35 +234,12 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 						</a>
 					</div>
 				</div>
-				<div class="columns is-desktop">
-					<!-- Project 3 -->
-					<div class="column is-6">
-						<a href="http://www.bicimapa.com/" target="_blank">
-							<div class="card">
-								<div class="card-image">
-									<figure class="image is-350x150">
-										<img src="assets/img/work_2.png" alt="Bicimapa">
-									</figure>
-								</div>
-								<div class="card-content">
-									<p class="title is-3">Bicimapa.com</p>
-									<p class="subtitle is-6">Urban cycling crowdsourced mapped information</p>
-									<a href="http://www.bicimapa.com/" target="_blank"><p> <br>Read more
-										<span class="icon">
-											<i class="fa fa-long-arrow-right"></i>
-										</span>
-									</p></a>
-								</div>
-							</a>
-						</div>
-					</div>
-				</div>
 			</div>
 		</section>
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<small>© Alberto Alonso Portfolio 2017 👨🏻‍💻 &nbsp;|&nbsp; alonsog.alberto@gmail.com</small>
+			<small>© Alberto Alonso Portfolio 2018 👨🏻‍💻 &nbsp;|&nbsp; alberto.alonso@endava.com</small>
 		</section>
 
 		<!-- Scripts  -->
