addition of recent projects

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
 	<meta name="author" content="Alberto Alonso">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#E25D33">
 
 	<!-- Mixpanel -->
 	<!-- start Mixpanel --><script type="text/javascript">(function(e,a){if(!a.__SV){var b=window;try{var c,l,i,j=b.location,g=j.hash;c=function(a,b){return(l=a.match(RegExp(b+"=([^&]*)")))?l[1]:null};g&&c(g,"state")&&(i=JSON.parse(decodeURIComponent(c(g,"state"))),"mpeditor"===i.action&&(b.sessionStorage.setItem("_mpcehash",g),history.replaceState(i.desiredHash||"",e.title,j.pathname+j.search)))}catch(m){}var k,h;window.mixpanel=a;a._i=[];a.init=function(b,c,f){function e(b,a){var c=a.split(".");2==c.length&&(b=b[c[0]],a=c[1]);b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,
@@ -43,6 +44,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 			      <span></span>
 			      <span></span>
 			      <span></span>
+						<span></span>
 			    </button>
 			  </div>
 
@@ -57,7 +59,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 			        </a>
 			        <div class="navbar-dropdown is-boxed">
 			          <a class="navbar-item" href="work_hogaru.html">
-			            Hogaru.com3
+			            Hogaru.com
 			          </a>
 								<hr class="navbar-divider">
 			          <a class="navbar-item" href="work_nequi.html">
