--- a/work_endava.html
+++ b/work_endava.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Work: Nequi</title>
+	<title>Work: Endava Ramp-Up Journal</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-	<meta name="author" content="Nequithon">
+	<meta name="author" content="Endava">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#E25D33">
 </head>
@@ -86,14 +86,14 @@
 		</nav>
 
 		<!-- About Me -->
-		<section class="hero is-primary is-nequi is-medium">
+		<section class="hero is-medium is-dark is-bold">
 		  <div class="hero-body">
-		    <div class="container is-white">
+		    <div class="container">
 		      <h1 class="title">
-		        NEQUI Bancolombia Neobank
+		        Endava Ramp Up Journal
 		      </h1>
 		      <h2 class="subtitle">
-		        Micro-crowdlennding concept Hackathon demo
+		        Onboarding tool for large companies | Endava
 		      </h2>
 		    </div>
 		  </div>
@@ -106,35 +106,82 @@
 					<div class="column is-three-quarters is-narrow">
 						<div class="has-text-left">
 							<div class="content">
-								<h2 class="title is-2">The challenge</h2>
-								<p class="subtitle is-5">NEQUI board was looking forward to increase the use of their features such as money transfer and build a community on the product <br></p>
-								<p class=''><span class='subtitle is-5'>The problem -</span>
-									Base-pyramid people use to look for alternate ways of funding small loans when having an economic contigency
+								<h2 class="title is-2">Onboarding Manager Experience </h2>
+								<p class="subtitle is-5">Several dependencies on their employee training upon stakeholders from other company areas<br></p>
+								<p class=''><span class='subtitle is-5'>The Opportunity -</span>
+									Endava BOD expansion has rose up to hundreds of employees that require an onboarding process that can be verified and tracked.
 								</p>
-								<p class=''><span class='subtitle is-5'>The solution -</span> A P2P crowdlending feature that enable a user to request money to their relatives or friends with no interest but acquiring reputation and credit score
+								<p class=''><span class='subtitle is-5'>The solution -</span>A task manager product was developed for new joiners and admins that boosts the <strong>integration</strong> of every single process and stakeholder during the new joiner onboarding.
+									The tool is made to work on any training situation, for instance: technical trainings.
+									<br>
+									This product has iterated 4 times since it's conception on every user test.
 								</p>
-								<p class=''><span class='subtitle is-5'>The UX Approach -</span>Gamifying the experience of milestones on the loan, for both loaner and loanee to see the progression and goals for accomplishing the loan on time
+								<p class=''><span class='subtitle is-5'>The UX Approach -</span>The solution was conceived and refined by UX Research and prototyping using these qualitative and quantitative methods:
 									<br>
 								</p>
-								<p class=''><span class='subtitle is-5'>The Deliverables -</span> One pitch and one User-flow functioning prototype
+								<div class="columns is-desktop">
+									<div class="column is-half">
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>1. Task Analysis</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>Stakeholder Interviews & Benchmarking</td>
+												<td>Journey mapping for all stakeholders</td>
+											</tr>
+										</table>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>2. Scoping</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>Quantitative - Tasks count, Dependencies flow</td>
+												<td>Qualitative - Reviewal of 4 self-methods used currently for training tracking by each stakeholder, most of them made on Excel</td>
+											</tr>
+										</table>
+									</div>
+									<div class="column is-half">
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>3. Prototyping</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>User Test - User cases derived from research tried on Wireframes</td>
+												<td>Quick Iteration - Several versions were deployed during user tests to accelearte the error making prior to development</td>
+											</tr>
+										</table>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>4. Deployment</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>User Stories, Wireframing, Cases of Use</td>
+											</tr>
+										</table>
+									</div>
+								</div>
+								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Customer Journey Map, Stakeholder Map, User Persona Chart, Current User Flow, Wireframes
 									<br>
+								Check the wireframe in invision
+									<strong><a href="https://endava.invisionapp.com/share/BSL6U746VN2"> HERE &nbsp;<i class="fa fa-mouse-pointer"></i></a></strong> <br/>
+								Check the customer journey
+									<strong><a href="assets/img/RUJCustomerJourney.pdf"> HERE&nbsp;<i class="fa fa-bar-chart" aria-hidden="true"></i></a></strong>
 								</p>
 
 							</div>
-						</div>
-						<br/>
-						<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRRwucYmcMpc1NgJBYVeh9bvUgj5l_7Hodq-8pQ87h7n_yTNWdnGaylxyLTdmDMarRyncNO4fCbB2DP/embed?start=false&loop=true&delayms=10000" frameborder="0" width="100%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-						<p class=''><br/><span class='subtitle is-5'>The functional prototype -</span> You must clic on the shield visible on the URL and select "load unsafe scripts", or load the protoype here instead http://nequithon.herokuapp.com
-							<br/>
-						</p>
-						<div class="iframe-phone">
-					    <iframe class='iframe-phone-nequi' src="http://nequithon.herokuapp.com/" frameborder="0" width="100%" height="640" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
