--- a/work_hogaru.html
+++ b/work_hogaru.html
@@ -11,6 +11,7 @@
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
 	<meta name="author" content="Hogaru.com">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#E25D33">
 </head>
 	<body>
 		<!-- Navbar -->
@@ -23,32 +24,39 @@
 		      <span></span>
 		      <span></span>
 		      <span></span>
+					<span></span>
 		    </button>
 		  </div>
 
 		  <div class="navbar-menu" id="navMenu">
-		    <div class="navbar-start">
-		      <a class="navbar-item" href="https://a-alonso.github.io/portfolio/">
-		        Home
-		      </a>
-		      <div class="navbar-item has-dropdown is-hoverable">
-		        <a class="navbar-link" href="#about">
-		          Work
-		        </a>
-		        <div class="navbar-dropdown">
-		          <a class="navbar-item" href="work_hogaru.html">
-		            Hogaru.com
-		          </a>
-		          <a class="navbar-item" href="work_nequi.html">
-		            Nequi Neobank
-		          </a>
-		          <a class="navbar-item" href="https://bicimapa.com">
-		            Bicimapa
-		          </a>
-							<!-- <hr class="navbar-divider"> -->
-		        </div>
-		      </div>
-		    </div>
+				<div class="navbar-start">
+					<a class="navbar-item" href="https://a-alonso.github.io/portfolio/">
+						Home
+					</a>
+					<div class="navbar-item has-dropdown is-hoverable">
+						<a class="navbar-link" href="#about">
+							Work
+						</a>
+						<div class="navbar-dropdown is-boxed">
+							<a class="navbar-item" href="work_hogaru.html">
+								Hogaru.com
+							</a>
+							<hr class="navbar-divider">
+							<a class="navbar-item" href="work_nequi.html">
+								Nequi Neobank
+							</a>
+							<hr class="navbar-divider">
+							<a class="navbar-item" href="work_rappi.html" target:"_blank">
+								Rappi
+							</a>
+							<hr class="navbar-divider">
+							<a class="navbar-item" href="work_endava.html" target:"_blank">
+								Endava Ramp-Up Journal
+							</a>
+							<hr class="navbar-divider">
+						</div>
+					</div>
+				</div>
 
 		    <div class="navbar-end">
 		      <div class="navbar-item">
@@ -268,7 +276,7 @@
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<small>© Alberto Alonso Portfolio 2017 👨🏻‍💻 | alonsog.alberto@gmail.com</small>
+			<small>© Alberto Alonso Portfolio 2018 👨🏻‍💻 &nbsp;|&nbsp; alberto.alonso@endava.com</small>
 		</section>
 
 		<!-- Scripts  -->
