--- a/work_rappi.html
+++ b/work_rappi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Work: Nequi</title>
+	<title>Work: Rappi</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-	<meta name="author" content="Nequithon">
+	<meta name="author" content="Endava">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#E25D33">
 </head>
@@ -86,14 +86,14 @@
 		</nav>
 
 		<!-- About Me -->
-		<section class="hero is-primary is-nequi is-medium">
+		<section class="hero is-medium is-danger is-bold">
 		  <div class="hero-body">
-		    <div class="container is-white">
+		    <div class="container">
 		      <h1 class="title">
-		        NEQUI Bancolombia Neobank
+		        Rappi
 		      </h1>
 		      <h2 class="subtitle">
-		        Micro-crowdlennding concept Hackathon demo
+		        Shopping list feature evaluation and iteration into smart suggestion based on shoppping behaviour
 		      </h2>
 		    </div>
 		  </div>
@@ -106,35 +106,79 @@
 					<div class="column is-three-quarters is-narrow">
 						<div class="has-text-left">
 							<div class="content">
-								<h2 class="title is-2">The challenge</h2>
-								<p class="subtitle is-5">NEQUI board was looking forward to increase the use of their features such as money transfer and build a community on the product <br></p>
-								<p class=''><span class='subtitle is-5'>The problem -</span>
-									Base-pyramid people use to look for alternate ways of funding small loans when having an economic contigency
+								<h2 class="title is-2">Iterative purchases Experience </h2>
+								<p class="subtitle is-5">Super Market users tend 83% to purchase the same products on a fortnightly basis<br></p>
+								<p class=''><span class='subtitle is-5'>The Opportunity -</span>
+									Enhance the purchase experience for repetitive perishable products (eggs, milk, bread...), first thought as shopping lists as every shoppping application does.
 								</p>
-								<p class=''><span class='subtitle is-5'>The solution -</span> A P2P crowdlending feature that enable a user to request money to their relatives or friends with no interest but acquiring reputation and credit score
+								<p class=''><span class='subtitle is-5'>The solution -</span> Artificial Intelligence algorithm that analyses the previous orders made on supermarkets.
+									<br>
+									Once the user adds to the basket a repetitive product, the algorithm displays the previously ordered products order with this one suggesting to add them to the basket. <br/>
+									This feature was <strong>adopted by 7.5%</strong> supermarket active users after <strong>3 weeks</strong> of its deployment
 								</p>
-								<p class=''><span class='subtitle is-5'>The UX Approach -</span>Gamifying the experience of milestones on the loan, for both loaner and loanee to see the progression and goals for accomplishing the loan on time
+								<p class=''><span class='subtitle is-5'>The UX Approach -</span>The solution was conceived and refined by UX Research and prototyping using these qualitative and quantitative methods:
 									<br>
 								</p>
-								<p class=''><span class='subtitle is-5'>The Deliverables -</span> One pitch and one User-flow functioning prototype
+								<div class="columns is-desktop">
+									<div class="column is-half">
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>1. Journey mapping</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>User shadowing</td>
+												<td>Usability testing</td>
+											</tr>
+										</table>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>2. Scoping</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>Quantitative - SQL Query for product category comparisson on users sample on their last 10 orders </td>
+												<td>Qualitative - Case of use test deployed on users to see their interaction for this feature</td>
+											</tr>
+										</table>
+									</div>
+									<div class="column is-half">
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>3. Prototyping</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>Wizard of Oz - Insitu simulation of the algorythm running on a fixed flow</td>
+												<td>Surveying - Future scenario tested on real users</td>
+											</tr>
+										</table>
+										<table class='table'>
+											<thead>
+												<tr>
+													<th colspan='2'>4. Deployment</th>
+												</tr>
+											</thead>
+											<tr>
+												<td>User flow, Decision Tree, Wireframing</td>
+											</tr>
+										</table>
+									</div>
+								</div>
+								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Quantitative Analysis, Usability test results
 									<br>
-								</p>
-
+								Check the live version
+									<strong><a href="https://itunes.apple.com/us/app/rappi/id984044296?mt=8"> on iOS &nbsp; <i class="fa fa-apple" aria-hidden="true"></i></a></strong> or
+									<strong><a href="https://play.google.com/store/apps/details?id=com.grability.rappi&hl=en"> Android &nbsp;<i class="fa fa-android" aria-hidden="true"></i></a></strong>
 							</div>
-						</div>
-						<br/>
-						<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRRwucYmcMpc1NgJBYVeh9bvUgj5l_7Hodq-8pQ87h7n_yTNWdnGaylxyLTdmDMarRyncNO4fCbB2DP/embed?start=false&loop=true&delayms=10000" frameborder="0" width="100%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-						<p class=''><br/><span class='subtitle is-5'>The functional prototype -</span> You must clic on the shield visible on the URL and select "load unsafe scripts", or load the protoype here instead http://nequithon.herokuapp.com
-							<br/>
-						</p>
-						<div class="iframe-phone">
-					    <iframe class='iframe-phone-nequi' src="http://nequithon.herokuapp.com/" frameborder="0" width="100%" height="640" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
