--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 			      </a>
 			      <div class="navbar-item has-dropdown is-hoverable">
 			        <a class="navbar-link" href="#about">
-			          Work
+			          Recent Work
 			        </a>
 			        <div class="navbar-dropdown is-boxed">
 			          <a class="navbar-item" href="work_hogaru.html">
