Recent work title addition

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 		<section  id="Work" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
-					<h2 class="title is-2">Work</h2>
+					<h2 class="title is-2">Recent Work</h2>
 				</div>
 
 				<div class="columns is-desktop">
