--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 								Find here a merge between Service Design and Technology Crafting.
 								In the past with: Rappi, Samsung, Intel, IT Minsitry. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
 								<br/>
-								Currently at Endava
+								Currently at Endava and acquiring a certification on data analysis 🤓
 								<br/><br/>
 								Stay in touch! on the right corner buttons to <strong>get in contact</strong><br/>
 							</p>
