--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 								Holding a Design degree, worked as a UX Designer and Front-end developer, my background like any other digital product professional is not traditional.<br/>
 								My career is focused on planning, testing, deploying, measuring and iterating digital services
 								<br>
-								<br><br>
+								<br>
 								Find here a merge between Service Design and Technology Crafting.
 								In the past with: Rappi, Samsung, Intel, IT Minsitry. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
-								<br/>
-								Currently at Endava and acquiring a certification on data analysis 🤓
 								<br/><br/>
+								Currently at <span class='has-text-weight-semibold' style='color:	#CD4D2D;'>Endava</span>  and acquiring a certification on data analysis 🤓
+								<br/>
 								Stay in touch! on the right corner buttons to <strong>get in contact</strong><br/>
 							</p>
 						</div>
