target blank bug on all external links

--- a/work_endava.html
+++ b/work_endava.html
@@ -171,9 +171,9 @@
 								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Customer Journey Map, Stakeholder Map, User Persona Chart, Current User Flow, Wireframes
 									<br>
 								Check the wireframe in invision
-									<strong><a href="https://endava.invisionapp.com/share/BSL6U746VN2"> HERE &nbsp;<i class="fa fa-mouse-pointer"></i></a></strong> <br/>
+									<strong><a href="https://endava.invisionapp.com/share/BSL6U746VN2"> HERE &nbsp;<i class="fa fa-mouse-pointer" target="_blank"></i></a></strong> <br/>
 								Check the customer journey
-									<strong><a href="assets/img/RUJCustomerJourney.pdf"> HERE&nbsp;<i class="fa fa-bar-chart" aria-hidden="true"></i></a></strong>
+									<strong><a href="assets/img/RUJCustomerJourney.pdf"> HERE&nbsp;<i class="fa fa-bar-chart" aria-hidden="true" target="_blank"></i></a></strong>
 								</p>
 
 							</div>
