--- a/work_nequi.html
+++ b/work_nequi.html
@@ -124,7 +124,8 @@
 						</div>
 						<br/>
 						<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRRwucYmcMpc1NgJBYVeh9bvUgj5l_7Hodq-8pQ87h7n_yTNWdnGaylxyLTdmDMarRyncNO4fCbB2DP/embed?start=false&loop=true&delayms=10000" frameborder="0" width="100%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-						<p class=''><br/><span class='subtitle is-5'>The functional prototype -</span> You must clic on the shield visible on the URL and select "load unsafe scripts", or load the protoype here instead http://nequithon.herokuapp.com
+						<p class=''><br/><span class='subtitle is-5'>The functional prototype -</span> You must clic on the shield visible on the URL and select "load unsafe scripts", or load the protoype here instead
+							<a href="http://nequithon.herokuapp.com" target="_blank">http://nequithon.herokuapp.com</a>
 							<br/>
 						</p>
 						<div class="iframe-phone">
