--- a/work_rappi.html
+++ b/work_rappi.html
@@ -171,8 +171,8 @@
 								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Quantitative Analysis, Usability test results
 									<br>
 								Check the live version
-									<strong><a href="https://itunes.apple.com/us/app/rappi/id984044296?mt=8"> on iOS &nbsp; <i class="fa fa-apple" aria-hidden="true"></i></a></strong> or
-									<strong><a href="https://play.google.com/store/apps/details?id=com.grability.rappi&hl=en"> Android &nbsp;<i class="fa fa-android" aria-hidden="true"></i></a></strong>
+									<strong><a href="https://itunes.apple.com/us/app/rappi/id984044296?mt=8"> on iOS &nbsp; <i class="fa fa-apple" aria-hidden="true" target="_blank"></i></a></strong> or
+									<strong><a href="https://play.google.com/store/apps/details?id=com.grability.rappi&hl=en"> Android &nbsp;<i class="fa fa-android" aria-hidden="true" target="_blank"></i></a></strong>
 							</div>
 						</div>
 					</div>
