--- a/work_hogaru.html
+++ b/work_hogaru.html
@@ -174,8 +174,8 @@
 									<strong><a href="http://invis.io/VHDZFQGRZ" target="_blank"> HERE</a></strong>
 									<br/>
 								Check the live version
-									<strong><a href="https://itunes.apple.com/co/app/hogaru/id1045276996?mt=8"> on iOS &nbsp; <i class="fa fa-apple" aria-hidden="true" target="_blank"></i></a></strong> or
-									<strong><a href="https://play.google.com/store/apps/details?id=com.hogaru.clientApp"> Android &nbsp;<i class="fa fa-android" aria-hidden="true" target="_blank"></i></a></strong>
+									<strong><a href="https://itunes.apple.com/co/app/hogaru/id1045276996?mt=8" target="_blank"> on iOS &nbsp; <i class="fa fa-apple" aria-hidden="true" ></i></a></strong> or
+									<strong><a href="https://play.google.com/store/apps/details?id=com.hogaru.clientApp" target="_blank"> Android &nbsp;<i class="fa fa-android" aria-hidden="true"></i></a></strong>
 								</p>
 
 							</div>
